{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 2295,
  "lineage": "6e82d178-fdbb-6fb1-9bef-accb5eb7c042",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "nat_pub_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b5790126537792b7",
            "public_dns": "ec2-13-42-197-76.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.197.76",
            "public_ipv4_pool": "amazon"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "web_pub_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a220d24622066246",
            "public_dns": "ec2-13-41-71-167.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.71.167",
            "public_ipv4_pool": "amazon"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "nat_pub_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-007fbd798d63d6711",
            "arn": "arn:aws:ec2:eu-west-2:816892709123:instance/i-012398a68866a61a9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-012398a68866a61a9",
            "instance_id": "i-012398a68866a61a9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "nat_db",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-03c9c2be33b54633b",
            "placement_partition_number": 0,
            "private_dns": "ip-10-2-254-254.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.254.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f83f6189be19cb23",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d9c57a1acba10a93",
            "tags": {
              "Name": "nat-pub-artem"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b3bca33758fdf659"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db1_artem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d0bcde4344ece910",
            "arn": "arn:aws:ec2:eu-west-2:816892709123:instance/i-05cff1b98b5e79649",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cff1b98b5e79649",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nat_db",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b681d9894873bcf6",
            "private_dns": "ip-10-2-2-41.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.2.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01a2f26967de73e30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-019458cb2e1bd37ee"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e40a5e60db76616",
            "tags": {
              "Name": "db1"
            },
            "tags_all": {
              "Name": "db1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019458cb2e1bd37ee"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_keypair_nat_db",
            "aws_security_group.database_sg",
            "aws_subnet.database_subnet",
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_pub_artem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007fbd798d63d6711",
            "arn": "arn:aws:ec2:eu-west-2:816892709123:instance/i-012398a68866a61a9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012398a68866a61a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nat_db",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c9c2be33b54633b",
            "private_dns": "ip-10-2-254-254.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.254.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f83f6189be19cb23",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "sg-0b3bca33758fdf659"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d9c57a1acba10a93",
            "tags": {
              "Name": "nat-pub-artem"
            },
            "tags_all": {
              "Name": "nat-pub-artem"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3bca33758fdf659"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_keypair_nat_db",
            "aws_security_group.nat_pub_sg",
            "aws_subnet.nat_pub_subnet",
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_pub_artem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d0bcde4344ece910",
            "arn": "arn:aws:ec2:eu-west-2:816892709123:instance/i-0090bf54080cf0ffa",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0090bf54080cf0ffa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063bcbd99844fadd7",
            "private_dns": "ip-10-1-254-10.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.254.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0108f14b489eed4f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d280deda42a1d647"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ac425289de9d11a",
            "tags": {
              "Name": "web-pub-artem"
            },
            "tags_all": {
              "Name": "web-pub-artem"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d280deda42a1d647"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_keypair_web",
            "aws_security_group.web_pub_sg",
            "aws_subnet.web_pub_subnet",
            "aws_vpc.web_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shared_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:internet-gateway/igw-09aeddfda7fb8ca46",
            "id": "igw-09aeddfda7fb8ca46",
            "owner_id": "816892709123",
            "tags": {
              "Name": "shared-igw"
            },
            "tags_all": {
              "Name": "shared-igw"
            },
            "vpc_id": "vpc-0cdc43cebf140e1f1"
          },
          "dependencies": [
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_pub_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:internet-gateway/igw-0db3453b2ba8d5e22",
            "id": "igw-0db3453b2ba8d5e22",
            "owner_id": "816892709123",
            "tags": {
              "Name": "web-pub-igw"
            },
            "tags_all": {
              "Name": "web-pub-igw"
            },
            "vpc_id": "vpc-0fb239ecc5f0bb0c0"
          },
          "dependencies": [
            "aws_vpc.web_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "database_to_web_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.254.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-017a9e452d0e479dc185402201",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017a9e452d0e479dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b5559273930668d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.database_rt",
            "aws_vpc.shared_vpc_artem",
            "aws_vpc.web_vpc_artem",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_pub_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09aeddfda7fb8ca46",
            "id": "r-rtb-0af98083f60bd62771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af98083f60bd6277",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.shared_igw",
            "aws_route_table.nat_pub_rt",
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "shared_to_nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0971a677622e9983b1080289494",
            "instance_id": "i-012398a68866a61a9",
            "instance_owner_id": "816892709123",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-03c9c2be33b54633b",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0971a677622e9983b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nat_pub_artem",
            "aws_key_pair.my_keypair_nat_db",
            "aws_route_table.shared_rt",
            "aws_security_group.nat_pub_sg",
            "aws_subnet.nat_pub_subnet",
            "aws_vpc.shared_vpc_artem",
            "data.aws_instance.nat_pub_instance",
            "data.aws_network_interfaces.nat_pub_eni"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "shared_to_web_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.254.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0971a677622e9983b185402201",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0971a677622e9983b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b5559273930668d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.shared_rt",
            "aws_vpc.shared_vpc_artem",
            "aws_vpc.web_vpc_artem",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "web_pub_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0db3453b2ba8d5e22",
            "id": "r-rtb-04e463665b3e5cd7c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e463665b3e5cd7c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_pub_igw",
            "aws_route_table.web_pub_rt",
            "aws_vpc.web_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "web_pub_to_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.2.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04e463665b3e5cd7c3228862083",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e463665b3e5cd7c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b5559273930668d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.web_pub_rt",
            "aws_vpc.shared_vpc_artem",
            "aws_vpc.web_vpc_artem",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:route-table/rtb-017a9e452d0e479dc",
            "id": "rtb-017a9e452d0e479dc",
            "owner_id": "816892709123",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "database-rt"
            },
            "tags_all": {
              "Name": "database-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdc43cebf140e1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:route-table/rtb-0af98083f60bd6277",
            "id": "rtb-0af98083f60bd6277",
            "owner_id": "816892709123",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nat-pub-rt"
            },
            "tags_all": {
              "Name": "nat-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdc43cebf140e1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shared_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:route-table/rtb-0971a677622e9983b",
            "id": "rtb-0971a677622e9983b",
            "owner_id": "816892709123",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "shared-rt"
            },
            "tags_all": {
              "Name": "shared-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdc43cebf140e1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:route-table/rtb-04e463665b3e5cd7c",
            "id": "rtb-04e463665b3e5cd7c",
            "owner_id": "816892709123",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "web-pub-rt"
            },
            "tags_all": {
              "Name": "web-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb239ecc5f0bb0c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_assoc_shared_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04be5e4ba9290482e",
            "route_table_id": "rtb-0971a677622e9983b",
            "subnet_id": "subnet-06e40a5e60db76616"
          },
          "dependencies": [
            "aws_route_table.shared_rt",
            "aws_subnet.database_subnet",
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de7f1a0f04fcefb1",
            "route_table_id": "rtb-0af98083f60bd6277",
            "subnet_id": "subnet-0d9c57a1acba10a93"
          },
          "dependencies": [
            "aws_route_table.nat_pub_rt",
            "aws_subnet.nat_pub_subnet",
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043d499aa5de1610b",
            "route_table_id": "rtb-04e463665b3e5cd7c",
            "subnet_id": "subnet-04ac425289de9d11a"
          },
          "dependencies": [
            "aws_route_table.web_pub_rt",
            "aws_subnet.web_pub_subnet",
            "aws_vpc.web_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:security-group/sg-019458cb2e1bd37ee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019458cb2e1bd37ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.254.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240403215041921100000005",
            "name_prefix": "terraform-",
            "owner_id": "816892709123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdc43cebf140e1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:security-group/sg-0b3bca33758fdf659",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3bca33758fdf659",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20240403215042437600000007",
            "name_prefix": "terraform-",
            "owner_id": "816892709123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nat-pub-sg"
            },
            "tags_all": {
              "Name": "nat-pub-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdc43cebf140e1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:security-group/sg-0d280deda42a1d647",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d280deda42a1d647",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.2.2.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-20240403215041917300000004",
            "name_prefix": "terraform-",
            "owner_id": "816892709123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-pub-sg"
            },
            "tags_all": {
              "Name": "web-pub-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb239ecc5f0bb0c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:subnet/subnet-06e40a5e60db76616",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e40a5e60db76616",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816892709123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database"
            },
            "tags_all": {
              "Name": "database"
            },
            "vpc_id": "vpc-0cdc43cebf140e1f1"
          },
          "dependencies": [
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:subnet/subnet-0d9c57a1acba10a93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.2.254.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9c57a1acba10a93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816892709123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nat-pub"
            },
            "tags_all": {
              "Name": "nat-pub"
            },
            "vpc_id": "vpc-0cdc43cebf140e1f1"
          },
          "dependencies": [
            "aws_vpc.shared_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:subnet/subnet-04ac425289de9d11a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.254.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ac425289de9d11a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816892709123",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-pub"
            },
            "tags_all": {
              "Name": "web-pub"
            },
            "vpc_id": "vpc-0fb239ecc5f0bb0c0"
          },
          "dependencies": [
            "aws_vpc.web_vpc_artem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shared_vpc_artem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:vpc/vpc-0cdc43cebf140e1f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0eee53b206dddb3c0",
            "default_route_table_id": "rtb-000ca962c1974263e",
            "default_security_group_id": "sg-073cc0692ca1854e1",
            "dhcp_options_id": "dopt-0369cdb4df205ef71",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cdc43cebf140e1f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000ca962c1974263e",
            "owner_id": "816892709123",
            "tags": {
              "Name": "shared-vpc-artem"
            },
            "tags_all": {
              "Name": "shared-vpc-artem"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc_artem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:816892709123:vpc/vpc-0fb239ecc5f0bb0c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a74f22cf361d46d5",
            "default_route_table_id": "rtb-04c6a453ff1223a6f",
            "default_security_group_id": "sg-0e50f6e3082613761",
            "dhcp_options_id": "dopt-0369cdb4df205ef71",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb239ecc5f0bb0c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c6a453ff1223a6f",
            "owner_id": "816892709123",
            "tags": {
              "Name": "web-vpc-artem"
            },
            "tags_all": {
              "Name": "web-vpc-artem"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-08b5559273930668d",
            "peer_owner_id": "816892709123",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-0cdc43cebf140e1f1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "web-shared-pcx"
            },
            "tags_all": {
              "Name": "web-shared-pcx"
            },
            "vpc_id": "vpc-0fb239ecc5f0bb0c0"
          },
          "dependencies": [
            "aws_vpc.shared_vpc_artem",
            "aws_vpc.web_vpc_artem"
          ]
        }
      ]
    }
  ]
}